mark website as WIP

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <body>
     <div class="header">
       <div>
-        <div class="title">mark kudriavtsev//</div>
+        <div class="title">WEBSITE CONTENT WIP mark kudriavtsev//</div>
         <div class="subtitle">developer, toronto</div>
       </div>
       <span class="theme-toggle" onclick="toggleTheme()">theme</span>
